@@ -4294,7 +4294,7 @@ connection if a previous connection has died for some reason."
 	    (tramp-get-buffer vec)
 
 	    ;; If `non-essential' is non-nil, don't reopen a new connection.
-	    (when non-essential
+	    (when (and (boundp 'non-essential) (symbol-value 'non-essential))
 	      (throw 'non-essential 'non-essential))
 
 	    (tramp-with-progress-reporter
