@@ -1,3 +1,11 @@
+2012-06-20  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp-compat.el (top): Do not require tramp-util.el and
+	tramp-vc.el anymore, it hurts at least for SXEmacs.
+
+	* tramp-sh.el (tramp-maybe-open-connection): Check also whether
+	`non-essential' is bound.
+
 2012-06-17  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp.el (tramp-file-name-handler): Catch 'non-essential.
